# telegrambot-centrekrasok

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: __init__.py
app/llm/: base.py  providers.py
app/policies/: __init__.py  answer_policy.py  voice.py
app/prompts/: __init__.py  assistant_prompt.py
app/rag/: __init__.py  models.py  retriever.py
app/router/: __init__.py  intents.py  router.py
data/: company_profile.md  sources.md
docs/: demo.md  research.md
eval/: test_cases.yaml
prompts/codex/: 00_SYSTEM_PROMPT.md  01_PROJECT_CONTEXT.md  02_FEATURE_BUILDING.md  03_BUG_FIXING.md  04_REFACTORING.md  05_RAG_PIPELINE.md  06_LLM_INTEGRATION.md  07_EVALUATION.md  08_OPTIMIZATION.md  09_PRODUCTION_READINESS.md  10_CODE_EXPLANATION.md  11_GITHUB_README.md  12_MCP_SOURCES.md  13_TASK_TEMPLATE.md  14_GIT_BRANCH_MANAGEMENT.md  14_PROJECT_WORKFLOW.md  15_REFERENCES.md
prompts/codex/mcp/: 00_MCP_OVERVIEW.md  01_TOOL_CONTRACTS.md  02_RESOURCE_METADATA.md  03_MCP_TASK_PROMPT.md
scripts/: run_bot.ps1  run_eval.py
src/company_bot/: __init__.py  __main__.py  assistant.py  bot.py  config.py  knowledge.py  memory.py  providers.py
tests/: test_assistant.py  test_bot.py  test_knowledge.py
